cmake_minimum_required(VERSION 2.8)
project(vmath)

add_library(vmath STATIC vmath.h)
set_target_properties(vmath PROPERTIES LINKER_LANGUAGE C)
include_directories(.)

if(MSVC)
	add_definitions(-D_CRT_SECURE_NO_WARNINGS -D__SSE__ -D__SSE2__ -D__SSE3__ -D__SSE4_1__ -D__SSE4_2__)
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /arch:SSE2")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /arch:SSE2")
endif()
if(CMAKE_COMPILER_IS_GNUCC OR "${CMAKE_C_COMPILER_ID}" STREQUAL "Clang")
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -msse -msse2 -msse3 -msse4.1 -msse4.2")
endif()
if(CMAKE_COMPILER_IS_GNUCXX OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -msse -msse2 -msse3 -msse4.1 -msse4.2")
endif()

option(BUILD_TESTS "Build unit tests" OFF)
if(BUILD_TESTS)
	if(CMAKE_COMPILER_IS_GNUCXX AND CMAKE_COMPILER_IS_GNUCC)
		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O0 --coverage")
		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0 --coverage")
	endif()

	# This must be set in the top-level CMakeLists.txt for the tests to be run by 'make test' or ctest.
	# enable_testing()
	# add_custom_target(check COMMAND ctest -V)

	set(gtest_force_shared_crt ON)
	set(GTEST_ROOT "${CMAKE_CURRENT_LIST_DIR}/lib/gtest")
	add_subdirectory(${GTEST_ROOT})
	# find_package(GTest REQUIRED)
	# include_directories(${GTEST_INCLUDE_DIRS})
	include_directories(${gtest_SOURCE_DIR}/include)

	add_executable(runTests test/test.cpp)
	# target_link_libraries(runTests ${GTEST_BOTH_LIBRARIES} pthread ${LIBRARIES})
	target_link_libraries(runTests gtest gtest_main vmath)
	# add_test(NAME runTests COMMAND runTests)
endif()
