cmake_minimum_required(VERSION 2.8)
project(vmath)

if(NOT CMAKE_VERSION VERSION_LESS 3.0)
	add_library(vmath INTERFACE)
	target_include_directories(vmath INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
else()
	add_library(vmath STATIC vmath.h)
	set_target_properties(vmath PROPERTIES LINKER_LANGUAGE C)
	include_directories(${CMAKE_CURRENT_SOURCE_DIR})
endif()

option(BUILD_TESTS "Build unit tests" OFF)
if(BUILD_TESTS)
	option(VMATH_TEST_NO_INTRINSICS "Enable/Disable intrinsics in tests" OFF)
	if(VMATH_TEST_NO_INTRINSICS)
		add_definitions(-DVMATH_NO_INTRINSICS=1)
	endif()

	find_package(Threads REQUIRED)
	find_package(GTest REQUIRED)
	include_directories(${GTEST_INCLUDE_DIRS})
	add_executable(runTests test/test.cpp)
	target_link_libraries(runTests ${GTEST_BOTH_LIBRARIES} vmath ${CMAKE_THREAD_LIBS_INIT})
endif()
